tests/syntax-error/array-return-verbose.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g array-return-verbose.silly -o %t.exe 2>&1 | %FileCheck %s
//
// Bison FE reports "unexpected ARRAY_START_TOKEN", ANTLR4 says mismatched input '[' expecting ';'
// -- both flag the array start location.
//
// Was not successful encoding alterate expected message output, so opted to just
// dumb down this test so that it doesn't have any specifics of the error message. That may
// seem useless, as this is essentially equivalent to array-return.silly -- but it still
// provides test coverage for both --no-verbose-parse-error, and the default.
//
// CHECK: array-return-verbose.silly:16:24: error: syntax error
// CHECK-NEXT:    16 | FUNCTION foo( ) : INT32[4]
// CHECK-NEXT:       |                        ^

FUNCTION foo( ) : INT32[4]
{
    INT32 r[4];

    RETURN r;
};
